0.0.2.0/ivy/_sources/docs/functional/ivy/experimental/ivy.functional.ivy.experimental.activations.rst.txt
Activations
===========


.. autosummary::
   :toctree: activations
   :template: functional_module.rst
   :hide-table:
   :recursive:

   
   ivy.functional.ivy.experimental.activations.elu
   
   
   ivy.functional.ivy.experimental.activations.logit
   
   
   ivy.functional.ivy.experimental.activations.logsigmoid
   
   
   ivy.functional.ivy.experimental.activations.prelu
   
   
   ivy.functional.ivy.experimental.activations.relu6
   
   
   ivy.functional.ivy.experimental.activations.selu
   
   
   ivy.functional.ivy.experimental.activations.sequence_length
   
   
   ivy.functional.ivy.experimental.activations.silu
   
   
   ivy.functional.ivy.experimental.activations.thresholded_relu
   




.. automodule:: ivy.functional.ivy.experimental.activations
   :special-members: __init__
   :show-inheritance:




.. autofunction:: ivy.elu

.. autofunction:: ivy.logit

.. autofunction:: ivy.logsigmoid

.. autofunction:: ivy.prelu

.. autofunction:: ivy.relu6

.. autofunction:: ivy.selu

.. autofunction:: ivy.sequence_length

.. autofunction:: ivy.silu

.. autofunction:: ivy.thresholded_relu







.. discussion-links:: ivy.functional.ivy.experimental.activations