0.0.6.2/ivy/_sources/docs/functional/ivy/experimental/ivy.functional.ivy.experimental.activations.rst.txt
Activations
===========


.. autosummary::
   :toctree: activations
   :template: functional_module.rst
   :hide-table:
   :recursive:

   
   
   
   
   ivy.functional.ivy.experimental.activations.celu
   
   
   ivy.functional.ivy.experimental.activations.elu
   
   
   ivy.functional.ivy.experimental.activations.hardshrink
   
   
   ivy.functional.ivy.experimental.activations.hardtanh
   
   
   ivy.functional.ivy.experimental.activations.logit
   
   
   ivy.functional.ivy.experimental.activations.logsigmoid
   
   
   ivy.functional.ivy.experimental.activations.prelu
   
   
   ivy.functional.ivy.experimental.activations.relu6
   
   
   ivy.functional.ivy.experimental.activations.scaled_tanh
   
   
   ivy.functional.ivy.experimental.activations.selu
   
   
   ivy.functional.ivy.experimental.activations.silu
   
   
   ivy.functional.ivy.experimental.activations.softshrink
   
   
   ivy.functional.ivy.experimental.activations.stanh
   
   
   ivy.functional.ivy.experimental.activations.tanhshrink
   
   
   ivy.functional.ivy.experimental.activations.threshold
   
   
   ivy.functional.ivy.experimental.activations.thresholded_relu
   




.. automodule:: ivy.functional.ivy.experimental.activations
   :special-members: __init__
   :show-inheritance:




.. autofunction:: ivy._celu_jax_like

.. autofunction:: ivy._logit_jax_like

.. autofunction:: ivy._relu6_jax_like

.. autofunction:: ivy.celu

.. autofunction:: ivy.elu

.. autofunction:: ivy.hardshrink

.. autofunction:: ivy.hardtanh

.. autofunction:: ivy.logit

.. autofunction:: ivy.logsigmoid

.. autofunction:: ivy.prelu

.. autofunction:: ivy.relu6

.. autofunction:: ivy.scaled_tanh

.. autofunction:: ivy.selu

.. autofunction:: ivy.silu

.. autofunction:: ivy.softshrink

.. autofunction:: ivy.stanh

.. autofunction:: ivy.tanhshrink

.. autofunction:: ivy.threshold

.. autofunction:: ivy.thresholded_relu







.. discussion-links:: ivy.functional.ivy.experimental.activations